--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <header class="header">
-      <img class="header__img" src="venice.jpg" alt="" />
+      <img class="header__img" src="./img/venice.jpg" alt="" />
       <div class="header__burger">
         <span class="burger__span"></span>
         <span class="burger__span"></span>
@@ -61,7 +61,11 @@
 
     <section class="intro" id="About">
       <div class="intro__article clearfix">
-        <img class="article__foto" src="ship.jpg" alt="statek na wodzie" />
+        <img
+          class="article__foto"
+          src="./img/ship.jpg"
+          alt="statek na wodzie"
+        />
         <h2 class="article__h2"><em>About us</em></h2>
         <p class="article__p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis
