--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900i&amp;subset=latin-ext"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Aloha Tours</title>
-  </head>
 
-  <body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900i&amp;subset=latin-ext"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Aloha Tours</title>
+</head>
+
+<body>
+  <div class="wrapper">
     <header class="header">
       <img class="header__img" src="./img/venice.jpg" alt="" />
       <div class="header__burger">
@@ -61,12 +57,7 @@
 
     <section class="intro" id="About">
       <div class="intro__article clearfix">
-        <img
-          class="article__foto"
-          src="./img/ship.jpg"
-          alt="statek na wodzie"
-        />
-        <h2 class="article__h2"><em>About us</em></h2>
+        <img class="article__foto" src="./img/ship.jpg" alt="statek na wodzie" />
         <p class="article__p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis
           urna vel mauris rhoncus pellentesque iaculis cursus ipsum. Nunc
@@ -79,14 +70,12 @@
           condimentum non, placerat at ligula. Aenean mattis dictum ultri cies.
           <strong>
             Maecenas nec commodo ipsum, id consequat nisi. Aliquam vestibulum
-            lectus vitae eleifend sagittis.</strong
-          >
+            lectus vitae eleifend sagittis.</strong>
           Nulla sem diam, rhoncu s ut accumsan sit amet, eleifend a eros.Proin
           posuere tellus non dolor convallis, nec placerat leo convallis.
           Suspendisse pot enti. Mauris at lacinia sapien, ac auctor erat.
           Curabitur justo nisl, lobortis ac bibendum in,<strong>
-            sodales quis ligula.</strong
-          >
+            sodales quis ligula.</strong>
         </p>
       </div>
     </section>
@@ -162,49 +151,35 @@
     <section class="location">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190035.070529193!2d12.368447728102444!3d41.90794194190941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2zUnp5bSwgV8WCb2NoeQ!5e0!3m2!1spl!2spl!4v1555443601107!5m2!1spl!2spl"
-        width="800"
-        height="400"
-        frameborder="0"
-        style="border:0"
-        allowfullscreen
-      ></iframe>
+        width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="location__socials" id="Contact">
         <ul class="socials__list">
           <li class="list__obj">
             <a href="#" class="obj__social"
-              ><i class="fas fa-phone-volume social-icon"></i>+1 33 91703177</a
-            >
+              ><i class="fas fa-phone-volume social-icon"></i>+1 33 91703177</a>
           </li>
           <li class="list__obj">
             <a href="mailto: PlanetTours@yahoo.com" class="obj__social"
               ><i class="far fa-envelope social-icon"></i
-              >PlanetTours@yahoo.com</a
-            >
+              >PlanetTours@yahoo.com</a>
           </li>
           <li class="list__obj">
             <a href="#" class="obj__social"
               ><i class="fab fa-facebook-square social-icon"></i> Follow us on
-              Facebook</a
-            >
+              Facebook</a>
           </li>
           <li class="list__obj">
             <a href="#" class="obj__social"
               ><i class="fab fa-twitter-square social-icon"></i> Follow us on
-              Twitter</a
-            >
+              Twitter</a>
           </li>
         </ul>
       </div>
       <div class="location__contact">
         <form action="" class="contact__form">
           <label class="form__label" for="Newsletter">
-            Subscribe us and get a free newsletter!</label
-          >
-          <input
-            class="form__input"
-            type="email"
-            placeholder="  Your email..."
-          />
+            Subscribe us and get a free newsletter!</label>
+          <input class="form__input" type="email" placeholder="  Your email..." />
           <button class="form__button">Get the Newsletter</button>
         </form>
       </div>
@@ -343,12 +318,10 @@
       </ul>
       <p class="developedBy">Developed by Paweł Leszko || &copy PL 2019</p>
     </footer>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
+    crossorigin="anonymous"></script>
+  <script src="main.js"></script>
+</body>
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.0.js"
-      integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
-  </body>
 </html>
